--- a/front-end/src/Components/Header/style.css
+++ b/front-end/src/Components/Header/style.css
@@ -1,4 +1,10 @@
 .nv-link{
+    display: block;
+    padding: .5rem 1rem;
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
     background-color: rgba(0, 0, 0, 0);
     color: rgba(255, 255, 255, 0.5);
     display: block;
